[package]
name = "modland_hash"
version = "0.1.0"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"
Build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
anyhow = "1.0"
futures-util = "0.3.14"
reqwest = { version = "0.11.3", features = ["stream", "blocking"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
filetime = "0.2"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
regex = "1.5"
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.17.0-rc.8"
walkdir = "2"
rayon = "1.1"
sha2 = "0.9.2"
