[package]
name = "modland_hash"
version = "0.2.2"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2018"
Build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
simple_logger = "2.1.0"
log = "0.4"
anyhow = "1.0"
ureq = "2.4.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
filetime = "0.2"
regex = "1.5"
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.17.0-rc.8"
walkdir = "2"
rayon = "1.5.1"
sha2 = "0.9.2"
