[package]
name = "modland_hash"
version = "0.3.4"
authors = ["Daniel Collin <daniel@collin.com>"]
edition = "2021"
Build = "build.rs"

[build-dependencies]
walkdir = "2"
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
simple_logger = "4.3"
log = "0.4"
anyhow = "1.0"
ureq = "2.4.0"
filetime = "0.2"
regex = "1.5"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17.0-rc.8"
walkdir = "2"
rayon = "1.5.1"
sha2 = "0.10"
rusqlite = { version = "0.31.0", features = ["bundled"] }
sevenz-rust = "0.5"

[profile.dev.package.sevenz-rust]
opt-level = 2
